[package]
name = "0930_ludum_dare"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = { version = "0.15.0", features = ["amethyst_tiles", "tiles"] }
nalgebra = "0.20"
ncollide2d = "0.22"
nphysics2d = "0.14"
nalgebra19 = { version = "0.19", package="nalgebra" }
imgui = "0.2"
amethyst-imgui = { git = "https://github.com/mbStavola/amethyst-imgui.git", branch = "amethyst-0.15" }
serde = { version = "1.0", features = ["derive"] }
tiled = "0.9.1"
rand = "0.7.3"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
default = ["vulkan"]
